fix: activity indicator

--- a/app/(authenticated)/board/[code]/components/user-list.styles.module.scss
+++ b/app/(authenticated)/board/[code]/components/user-list.styles.module.scss
@@ -1,11 +1,11 @@
 .online {
-  background-color: green;
+  background-color: green !important;
 }
 
 .idle {
-  background-color: orange;
+  background-color: orange !important;
 }
 
 .offline {
-  background-color: grey;
+  background-color: grey !important;
 }
